fix: icon too small

--- a/src/Card.css
+++ b/src/Card.css
@@ -107,8 +107,8 @@
 }
 
 .icon-edit {
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   color: rgb(17 24 39);
   opacity: 0;
 }
@@ -118,8 +118,8 @@
 }
 
 .icon-save {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   color: rgb(34 197 94);
 }
 
@@ -128,8 +128,8 @@
 }
 
 .icon-delete {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   color: rgb(239 68 68);
 }
 
@@ -140,7 +140,7 @@
 .icon-group {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 20px;
 }
 
 .card-label {
